# sudoku-as-a-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Vagrantfile  compose.yaml  docker-entrypoint.sh  playbook.yml  pyproject.toml
monitoring/: prometheus.yml
setup/: install-compose.sh
sudoku_as_a_service/: main.py  models.py  solver.py  utils.py
tests/: test_utils.py
