[tool.poetry]
name = "sudoku-as-a-service"
version = "0.1.0"
description = ""
authors = ["a <a>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
redis = "^5.0.2"
prometheus-client = "^0.20.0"
structlog = "^24.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pre-commit = "^3.6.2"
setuptools = "^69.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
